k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      labels:
        app: nginx-app

    spec:
      containers:
      - name: nginx-container
        image: image-registry.openshift-image-registry.svc:5000/pallav6414-dev/nginx-app:latest

        ports:
        - containerPort: 80
