k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: nginx-route

spec:
  to:
    kind: Service
    name: nginx-service

  port:
    targetPort: 8080
